[tool.poetry]
name = "link_shortening_service"
version = "0.1.0"
description = ""
authors = ["anastasiia <bannova.anastasiia@gmail.com>"]
readme = "README.md"
packages = [{include = "link_shortening_service"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.99.1"
uvicorn = "^0.22.0"
SQLAlchemy = "1.3.20"
aiopg = {extras = ["sa"], version = "1.3.4"}
alembic = "1.8.1"
psycopg2-binary = "^2.9.6"
python-dotenv = "^1.0.0"
httpx = "^0.24.1"


[tool.poetry.dev-dependencies]
mypy = "^0.971"
tox = "^3.25.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-asyncio = "^0.20.1"
nest-asyncio = "^1.5.6"
pytest-mock = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
